--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/conanbuildinfo.props
+/conaninfo.txt
+/conan_imports_manifest.txt
