--- a/PocoLithp/PocoLithp.vcxproj
+++ b/PocoLithp/PocoLithp.vcxproj
@@ -154,6 +154,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="overflow.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
