--- a/PocoLithp/PocoLithp2015.vcxproj
+++ b/PocoLithp/PocoLithp2015.vcxproj
@@ -109,6 +109,7 @@
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="PocoLithp.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
