--- a/PocoLithp/PocoLithp2015.vcxproj.filters
+++ b/PocoLithp/PocoLithp2015.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PocoLithp.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
