--- a/PocoLithp/PocoLithp.vcxproj.filters
+++ b/PocoLithp/PocoLithp.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="overflow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PocoLithp.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
