--- a/PocoLithp/PocoLithp.vcxproj.filters
+++ b/PocoLithp/PocoLithp.vcxproj.filters
@@ -38,6 +38,21 @@
     <ClCompile Include="PocoLithp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PLtests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PLglobals.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PLinterpreter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PLparser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PLtypes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
