Update parser to support comments (;;), update description

--- a/PocoLithp/PocoLithpContrib.vcxproj
+++ b/PocoLithp/PocoLithpContrib.vcxproj
@@ -245,6 +245,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
+    <None Include="..\samples\fac_recursive.lisp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\contrib\MinimalFoundation\MinimalFoundation.vcxproj">
