--- a/PocoLithp/PocoLithpContrib.vcxproj.filters
+++ b/PocoLithp/PocoLithpContrib.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="samples">
+      <UniqueIdentifier>{0ed402bd-6b1e-4738-9170-02c702dce305}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -56,5 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
+    <None Include="..\samples\fac_recursive.lisp">
+      <Filter>samples</Filter>
+    </None>
   </ItemGroup>
 </Project>
