--- a/PocoLithp/PocoLithpContrib.vcxproj.filters
+++ b/PocoLithp/PocoLithpContrib.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="PLtypes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PLruntime.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
@@ -66,6 +69,9 @@
       <Filter>samples</Filter>
     </None>
     <None Include="..\samples\eval.lisp">
+      <Filter>samples</Filter>
+    </None>
+    <None Include="..\samples\init.lisp">
       <Filter>samples</Filter>
     </None>
   </ItemGroup>
