--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contrib/poco"]
 	path = contrib/poco
 	url = https://github.com/pocoproject/poco
+[submodule "contrib/linenoise-ng"]
+	path = contrib/linenoise-ng
+	url = https://github.com/arangodb/linenoise-ng
