--- a/PocoLithp/PocoLithpContrib.vcxproj.filters
+++ b/PocoLithp/PocoLithpContrib.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="PocoLithp.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PLint_recursive.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PLruntime.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PLint_recursive.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
