--- a/PocoLithp/PocoLithpContrib.vcxproj.filters
+++ b/PocoLithp/PocoLithpContrib.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="PLint_recursive.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PLint_stackless.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PLint_recursive.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PLint_stackless.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
