--- a/PocoLithp/PocoLithpContrib.vcxproj
+++ b/PocoLithp/PocoLithpContrib.vcxproj
@@ -230,6 +230,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ELisp.hpp" />
     <ClInclude Include="overflow.h" />
     <ClInclude Include="PLint_recursive.hpp" />
     <ClInclude Include="PLint_stackless.hpp" />
@@ -238,6 +239,8 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ELisp.cpp" />
+    <ClCompile Include="ELthreads.cpp" />
     <ClCompile Include="PLglobals.cpp" />
     <ClCompile Include="PLinterpreter.cpp" />
     <ClCompile Include="PLint_recursive.cpp" />
