Work in progress

--- a/PocoLithp/Elispidae.vcxproj.filters
+++ b/PocoLithp/Elispidae.vcxproj.filters
@@ -137,5 +137,8 @@
     <None Include="..\lib\cosmos.lisp">
       <Filter>lib</Filter>
     </None>
+    <None Include="..\samples\stress_threads.lisp">
+      <Filter>samples</Filter>
+    </None>
   </ItemGroup>
 </Project>
