--- a/PocoLithp/Elispidae.vcxproj
+++ b/PocoLithp/Elispidae.vcxproj
@@ -342,6 +342,7 @@
     <None Include="..\samples\eval.lisp" />
     <None Include="..\samples\fac_recursive.lisp" />
     <None Include="..\samples\init.lisp" />
+    <None Include="..\samples\stress_threads.lisp" />
     <None Include="..\samples\test.lisp" />
     <None Include="..\samples\threading.lisp" />
   </ItemGroup>
